--- a/src/components/ItemDetails/ItemDetails.scss
+++ b/src/components/ItemDetails/ItemDetails.scss
@@ -1,5 +1,41 @@
-.imgDetails {
+.Details_img {
   width: 500px;
   height: 800px;
   object-fit: cover;
+}
+.div_stock{
+  padding-top: 20px;
+}
+.detail_div{
+  padding: 20px;
+  display: flex;
+  flex-flow: row;
+  gap: 20px;
+}
+
+.details_text_div{
+  margin: 50px;
+  padding: 20px;
+  display: flex;
+  flex-flow: column;
+}
+.details_text_div h2{
+  font-size: 30px;
+  font-weight: bold;
+  color: #000;
+}
+.details_text_div p{
+  font-size: 20px;
+  color: #000;
+}
+.details_text_div p span{
+  font-size: 20px;
+  color: #000;
+  font-weight: bold;
+}
+
+.detail-info__stock{
+  display: flex;
+  flex-flow: row;
+  gap: 20px;
 }
